# NIPD-ABM

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  cmake_install.cmake  customlauchscript.sh  data.csv
results/data_processing/: .RData  .Rhistory  data.csv  data_visualisation.R
src/: Agent.cpp  Agent.hpp  Saver.cpp  Saver.hpp  constants.hpp  main.cpp
src/AKML-lib/: AKML.hpp  GeneticAlgorithm.cpp  GeneticAlgorithm.hpp  Matrix.cpp  Matrix.hpp  NeuralLayer.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  UtilityLoops.hpp  cmake_install.cmake  main.cpp
src/AKML-lib/AgentBasedUtilities/: BaseAgent.hpp  CSV_Saver.hpp  Save.hpp  cmake_install.cmake
src/AKML-lib/AgentBasedUtilities/Debug/: libAKML_AgentBasedUtilities.dylib
src/AKML-lib/Debug/: libAKML.dylib
